# pokitto-mechator

./: .gitignore  CMakeLists.txt  My_settings.h  copy_over.bat  main.cpp  mechator-wip-ideas  pokitto-mechator.pro  pokitto-mechator.pro.user.4.10-pre1  project.json  shell.html
art/: jeep.aseprite
content/: config.json  config_win.json  pokitto-img-processor
content/TiledMapReader/: TiledMapReader.pro  TiledMapReader.pro.user.f1d6e7c.4.10-pre1  main.cpp
content/art/: boat.aseprite  boat_small.aseprite  clouds.aseprite  collisions.hex  enemy_boat.aseprite  enemy_ground.aseprite  enemy_helicopter.aseprite  enemy_laser_ew.aseprite  enemy_laser_ew.h  enemy_laser_ns.aseprite  enemy_plane.aseprite  enemy_tank.aseprite  enemy_tank_cannon.aseprite  enemy_watermine.aseprite  explosion-small.aseprite  explosion.aseprite  health_pips.aseprite  helicopter-blades.aseprite  helicopter.aseprite  hit.aseprite  jeep.aseprite  jungle.hex  jungletiles.aseprite  jungletiles_18x.aseprite  jungletilesterrain.aseprite  mechator_mock_dialogue.aseprite  mechator_mocks.aseprite  pickup-dollar.aseprite  pickup_blueprint.aseprite  pickup_hackingkit.aseprite  pickup_keycard1.aseprite  pickup_keycard2.aseprite  pickup_keycard3.aseprite  poi.aseprite  portrait_enemy.aseprite  projectile-grenade.aseprite  projectile-grenade.h  projectile.aseprite  projectile_med.aseprite  projectile_missile.aseprite  (+18 more)
content/maps/: .build_world.sh.swp  TiledMapReader  build_map.sh  build_sky.sh  build_world.sh  build_world_win.sh  doors.h  island_1_ground.json  island_1_ground.tmx  island_1_reduced.tmx  island_2_ground.json  island_2_ground.tmx  island_2_reduced.tmx  island_3_ground.json  island_3_ground.tmx  island_3_reduced.tmx  mapsprite.h  mapview_small.tsx  mapview_tiles.tsx  mechator.h  mechator.json  mechator.tmx  mechator_reduced.tmx  mechator_sky.json  mechator_sky.tmx  mechator_tiles.tsx  rule1.tmx  spawnpoints.cpp  spawnpoints.h  worldmutables.h  worldtiles.h
content/mus_source/: 2022-02-16 12-01.sunvox  boat_1.sunvox  boss_1.sunvox  boss_2.sunvox  boss_3.sunvox  canyons.sunvox  ocean_2.sunvox  ocean_3.sunvox  ocean_4.sunvox  overworld.sunvox  overworld_2.sunvox  overworld_3.sunvox  stormy_boss.sunvox  stormy_cape.sunvox  swamp.sunvox
content/sfx/: boss.raw  cancel.raw  canyon.raw  confirm.raw  deny.raw  enemy_shoot.raw  enemy_shoot_big.raw  explosion_big.raw  explosion_small.raw  get_dollar.raw  get_item.raw  grenade.raw  laser.raw  laser_charge.raw  missile.raw  ocean.raw  overworld_main.raw  playergun.raw  playergun_2x.raw  playerhit.raw  playerhit2.raw  ring.raw  select.raw  storm.raw  swamp.raw
content/sfx_desktop/: bomber.raw  boss.raw  cancel.raw  canyon.raw  confirm.raw  deny.raw  enemy_shoot.raw  enemy_shoot_big.raw  explosion_big.raw  explosion_small.raw  get_dollar.raw  get_item.raw  grenade.raw  laser.raw  laser_charge.raw  missile.raw  ocean.raw  overworld.raw  overworld_main.raw  playergun.raw  playergun_2x.raw  playerhit.raw  playerhit2.raw  ring.raw  select.raw  storm.raw  swamp.raw
content/sfx_source/: sfx_resamples.aup
core/: audiosystem.cpp  audiosystem.h  audiosystem.h.autosave  controls.cpp  controls.h  palettes.h  pokittolibextensions.cpp  pokittolibextensions.h  rendersystem.cpp  rendersystem.h  serialization.h
core/audio/: audiosystem.cpp  audiosystem.h
core/controls/: controls.cpp  controls.h
core/rendering/: camera.cpp  camera.h  rendersystem.cpp  rendersystem.h  screenbuffer.cpp  screenbuffer.h  spritewrapper.cpp  spritewrapper.h  tilemap.h  tiny4x7h.h
core/utilities/: babyfsm.cpp  babyfsm.h  fpshelper.cpp  fpshelper.h  objectpool.h  rect.cpp  rect.h  tween.cpp  tween.h  vec.h
data/mechator/: get_item.raw  laser.raw  options.cfg  overworld.raw  playergun.raw
game/: alertpalettes.h  constants.h  enums.h  funcs.h  palette.h  player.cpp  player.h  sequences.cpp  sequences.h  sprites.h  tilesets.h  variables.cpp  variables.h  weapons.cpp  weapons.h
game/entities/: barracks.cpp  barracks.h  effects.cpp  effects.h  enemy.cpp  enemy.h  enemymech.cpp  enemymech.h  pickups.cpp  pickups.h  pois.cpp  pois.h  projectile.cpp  projectile.h
game/maps/: alertregion.cpp  alertregion.h  doors.h  mechator.h  mechator_sky.h  regiontransitionhandler.cpp  regiontransitionhandler.h  sequencetrigger.cpp  sequencetrigger.h  spawnpoint.cpp  spawnpoint.h  spawnpoints.cpp  spawnpoints.h  worldmutables.h  worldtiles.h
game/physics/: body.cpp  body.h  collisionmanager.cpp  collisionmanager.h  pathfinding.cpp  pathfinding.h  regionmanager.cpp  regionmanager.h  steering.cpp  steering.h
game/rendering/: camera.cpp  camera.h  cloudmanager.cpp  cloudmanager.h  skytilemap.cpp  skytilemap.h
game/states/: blueprints.cpp  blueprints.h  collectblueprintprompt.cpp  collectblueprintprompt.h  eventscene.cpp  eventscene.h  game.cpp  game.h  gameover.cpp  gameover.h  gamewon.cpp  gamewon.h  mapviewer.cpp  mapviewer.h  opendoorprompt.cpp  opendoorprompt.h  openshopprompt.cpp  openshopprompt.h  optionsviewer.cpp  optionsviewer.h  pause.cpp  pause.h  repairs.cpp  repairs.h  shop.cpp  shop.h  title.cpp  title.h
game/ui/: ui.cpp  ui.h
game/utilities/: blinker.cpp  blinker.h  debuglog.cpp  debuglog.h  helpers.cpp  helpers.h  mapmanager.cpp  mapmanager.h  playerstats.cpp  playerstats.h  rumbler.h  sceneobjects.h  screentilestore.cpp  screentilestore.h  ticker.cpp  ticker.h  tween.cpp  (+5 more)
maps/: mechator.json  mechator.tmx
src/: main.cpp  pokitto-base.pro
(+109 files in other folders)
